cicd updated, dependency on infra variables removed, added daipe project variables

--- a/.cicd/master-pipeline.yml
+++ b/.cicd/master-pipeline.yml
@@ -1,12 +1,6 @@
-resources:
-  repositories:
-    - repository: adi
-      type: git
-      name: adi
-
 variables:
   # read main variables from infra variables definition
-  - template: .cicd/variables/variables.yml@adi
+  - template: variables/variables.yml
   # defined variables
   # run number
   - name: Build.Version
@@ -17,6 +11,8 @@ variables:
       value: $[ replace(variables['Build.SourceBranch'], 'refs/heads/', '') ]
     ${{ if startsWith(variables['Build.SourceBranch'], 'refs/pull/') }}:
       value: $[ replace(variables['System.PullRequest.SourceBranch'], 'refs/heads/', '') ]
+    ${{ if startsWith(variables['Build.SourceBranch'], 'refs/tags/') }}:
+      value: 'master'
 
 # build name based on pipeline name, source branch, date and run number
 name: "$(BuildDefinitionName)_$(SourceBranchName)_$(date:yyyyMMdd).$(Build.Version)"
@@ -27,6 +23,7 @@ trigger:
       - master
       - feature-*
       - hotfix-*
+      - refs/tags/*
 
 stages:
   - stage: DataFactoryCI
@@ -39,82 +36,46 @@ stages:
     displayName: Deploy Data Factory to dev environment
     dependsOn: DataFactoryCI
     condition: and(succeeded(), eq(variables['Build.SourceBranchName'], 'master'))
-    variables:
-      - template: .cicd/variables/variables-dev.yml@adi
     jobs:
       - template: templates/datafactory-cd.yml
-        parameters:
-          serviceConnectionName: '$(SERVICE_CONNECTION_NAME_DEV)'
-          environmentName: 'dev'
 
   - stage: DataFactoryCDtest
     displayName: Deploy Data Factory to test environment
     dependsOn: DataFactoryCI
     condition: and(succeeded(), eq(variables['Build.Reason'], 'PullRequest'))
-    variables:
-      - template: .cicd/variables/variables-test.yml@adi
     jobs:
       - template: templates/datafactory-cd.yml
-        parameters:
-          serviceConnectionName: '$(SERVICE_CONNECTION_NAME_TEST)'
-          environmentName: 'test'
 
   - stage: DataFactoryCDprod
     displayName: Deploy Data Factory to prod environment
-    dependsOn: DataFactoryCDdev
-    # build version condition to prevent running prod stage on init commit
-    condition: and(succeeded(), eq(variables['Build.SourceBranchName'], 'master'), ne(variables['Build.Version'], 0))
-    variables:
-      - template: .cicd/variables/variables-prod.yml@adi
+    dependsOn: DataFactoryCI
+    condition: and(succeeded(), startsWith(variables['Build.SourceBranch'], 'refs/tags/'))
     jobs:
       - template: templates/datafactory-cd.yml
-        parameters:
-          serviceConnectionName: '$(SERVICE_CONNECTION_NAME_PROD)'
-          environmentName: 'prod'
 
   - stage: DaipeCI
     dependsOn: []
     displayName: Build & Test Daipe
-    variables:
-      - template: .cicd/variables/variables-dev.yml@adi
     jobs:
       - template: templates/daipe-ci.yml
-        parameters:
-          serviceConnectionName: '$(SERVICE_CONNECTION_NAME_DEV)'
 
   - stage: DaipeCDdev
     displayName: Deploy Daipe to dev environment
     dependsOn: DaipeCI
-    condition: and(succeeded(), ne(variables['Build.Reason'], 'PullRequest'))
-    variables:
-      - template: .cicd/variables/variables-dev.yml@adi
+    condition: and(succeeded(), ne(variables['Build.Reason'], 'PullRequest'), not(startsWith(variables['Build.SourceBranch'], 'refs/tags/')))
     jobs:
       - template: templates/daipe-cd.yml
-        parameters:
-          serviceConnectionName: '$(SERVICE_CONNECTION_NAME_DEV)'
-          environmentName: 'dev'
 
   - stage: DaipeCDtest
     displayName: Deploy Daipe to test environment
     dependsOn: DaipeCI
     condition: and(succeeded(), eq(variables['Build.Reason'], 'PullRequest'))
-    variables:
-      - template: .cicd/variables/variables-test.yml@adi
     jobs:
       - template: templates/daipe-cd.yml
-        parameters:
-          serviceConnectionName: '$(SERVICE_CONNECTION_NAME_TEST)'
-          environmentName: 'test'
 
   - stage: DaipeCDprod
     displayName: Deploy Daipe to prod environment
-    dependsOn: DaipeCDdev
-    # build version condition to prevent running prod stage on init commit
-    condition: and(succeeded(), eq(variables['Build.SourceBranchName'], 'master'), ne(variables['Build.Version'], 0))
-    variables:
-      - template: .cicd/variables/variables-prod.yml@adi
+    dependsOn: DaipeCI
+    condition: and(succeeded(), startsWith(variables['Build.SourceBranch'], 'refs/tags/'))
     jobs:
       - template: templates/daipe-cd.yml
-        parameters:
-          serviceConnectionName: '$(SERVICE_CONNECTION_NAME_PROD)'
-          environmentName: 'prod'
