initial config setup deployment changed from {current_branch} to master

--- a/src/__myproject__/_config/config_dev.yaml
+++ b/src/__myproject__/_config/config_dev.yaml
@@ -6,4 +6,4 @@ parameters:
     address: '[Your DEV cluster address]'
     cluster_id: '[Your DEV cluster ID]'
     workspace:
-      base_dir: '/__myproject__/{current_branch}'
+      base_dir: '/__myproject__/master'  # Use {current_branch} placeholder to deploy to current branch named folder
