--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,11 +22,11 @@ packages = [
 
 [tool.poetry.dependencies]
 python = ">=3.7.1,<4.0.0"
-pandas = "1.0.1"
-numpy = "1.18.1"
+pandas = "1.1.3"
+numpy = "1.19.2"
 injecta = "0.10.*"
-databricks-bundle = "0.8.*"
-datalake-bundle = "0.6.*"
+databricks-bundle = "0.9.0b5"
+datalake-bundle = "0.7.0b2"
 
 [tool.poetry.dev-dependencies]
 databricks-connect = ">=7.3.7"
@@ -47,5 +47,5 @@ line-length = 140
 [tool.poe.tasks]
 black = "black src"
 black-check = "black --check src"
-flake8 = "flake8 --ignore=E501,W503 src"
+flake8 = "flake8 --ignore=E501,F403,F405,W503 src"
 container-check = "python src/__myproject__/ContainerTest.py"
