--- a/src/__myproject__/_config/config.yaml
+++ b/src/__myproject__/_config/config.yaml
@@ -2,13 +2,18 @@ parameters:
   datalake:
     base_path: '/%kernel.environment%'
 
+  # overrides default bundle settings defined in site-packages/databricksbundle/_config/config.yaml
+  databricksbundle:
+    databricks_connect:
+      connection:
+        address: '%databricks.address%'
+        cluster_id: '%databricks.cluster_id%'
+
+  # overrides default bundle settings defined in site-packages/datalakebundle/_config/config.yaml
   datalakebundle:
-      tables:
-        # bronze ------------------------------------------
-        bronze_db_batch.your_table_name:
-
-        # silver ------------------------------------------
-        silver_db_batch.your_table_name:
-
-        # gold --------------------------------------------
-        gold_db_batch.your_table_name:
+    table:
+      name_template: '%kernel.environment%_{identifier}'
+      defaults:
+        base_path: '%datalake.base_path%' # from config.yaml
+        layer: !expr 'db_identifier[:db_identifier.find("_")]' # bronze/silver/gold
+        target_path: !expr 'base_path + "/" + layer + "/" + table_identifier + ".delta"'
