--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,8 +25,8 @@ python = ">=3.7.1,<4.0.0"
 pandas = "1.1.3"
 numpy = "1.19.2"
 injecta = "0.10.*"
-databricks-bundle = "0.9.0b5"
-datalake-bundle = "0.7.0b2"
+databricks-bundle = "^1.0"
+datalake-bundle = "^1.0"
 
 [tool.poetry.dev-dependencies]
 databricks-connect = ">=7.3.7"
@@ -35,7 +35,7 @@ poethepoet = ">=0.9.0,<1.0.0"
 flake8 = "^3.8"
 pep8-naming = ">=0.11.1,<1.0.0"
 pyfony-core = "0.8.*"
-dbx-deploy = "0.14.*"
+dbx-deploy = "^1.0"
 
 [pyfony.bootstrap]
 root_module_name = "__myproject__"
