Daipe is now deployed to prod environment using dbx:release
There are three major changes

1. variables.yml and daipe-cd.yml - dbx:release is now used + some bug fixes

2. pyproject.toml and poetry.lock - dbx-deploy needs to be updated at lest to version 1.0.1. You can do this by using poetry add dbx-deploy==1.0.1

3. data factory configs - DBX_BASE_PATH was added to Data Factory global parameters to reflect daipe dbx_base_path. Notebook paths in Data Factory should be constructed as follows "@concat(pipeline().globalParameters.DBX_BASE_PATH, '/bronze/example_notebook')"

--- a/.cicd/templates/daipe-cd.yml
+++ b/.cicd/templates/daipe-cd.yml
@@ -65,8 +65,16 @@ jobs:
                   eval "$(conda shell.bash hook)"
                   source $HOME/.poetry/env
                   conda activate $PWD/.venv
-                  git checkout $(CURRENT_BRANCH)
-                  console dbx:deploy --env=$(ENV)
+
+                  if [ $(DBX_DEPLOY_METHOD) == "deploy" ]; then
+                    git branch -D $(CURRENT_BRANCH) || true
+                    git checkout -b $(CURRENT_BRANCH)
+                    console dbx:deploy --env=$(ENV)
+                  fi
+
+                  if [ $(DBX_DEPLOY_METHOD) == "release" ]; then
+                    console dbx:release --env=$(ENV)
+                  fi
             - task: Bash@3
               displayName: 'Link to Databricks workspace'
               inputs:
