databricks connect setup is now optional

--- a/src/__myproject__/_config/config.yaml
+++ b/src/__myproject__/_config/config.yaml
@@ -2,12 +2,12 @@ parameters:
   datalake:
     base_path: '/%kernel.environment%'
 
-  # overrides default bundle settings defined in site-packages/databricksbundle/_config/config.yaml
-  databricksbundle:
-    databricks_connect:
-      connection:
-        address: '%databricks.address%'
-        cluster_id: '%databricks.cluster_id%'
+#  # overrides default bundle settings defined in site-packages/databricksbundle/_config/config.yaml
+#  databricksbundle:
+#    databricks_connect:
+#      connection:
+#        address: '%databricks.address%'
+#        cluster_id: '%databricks.cluster_id%'
 
   # overrides default bundle settings defined in site-packages/datalakebundle/_config/config.yaml
   datalakebundle:
