Fix miniconda in CI/CD

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,9 +9,12 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v1
-      - uses: conda-incubator/setup-miniconda@v2.0.0
+      - uses: conda-incubator/setup-miniconda@v2.1.1
         with:
-          miniconda-version: 'py38_4.8.3'
+          miniconda-version: 'py39_4.10.3'
+      - run: |
+          conda config --remove channels defaults
+          conda config --append channels conda-forge
       - name: setup
         run: |
           cp .env.dist .env
