--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,17 +25,18 @@ python = ">=3.7.1,<4.0.0"
 pandas = "1.1.3"
 numpy = "1.19.2"
 injecta = "0.10.*"
-databricks-bundle = "^1.1.2"
+databricks-bundle = "^1.0"
 datalake-bundle = "^1.0"
 
 [tool.poetry.dev-dependencies]
-databricks-connect = ">=7.3.7"
+databricks-connect = "^7.3"
 black = "^20.8b1"
 poethepoet = ">=0.9.0,<1.0.0"
-flake8 = "^3.8"
+flake8 = "3.7.*"
 pep8-naming = ">=0.11.1,<1.0.0"
 pyfony-core = "0.8.*"
-dbx-deploy = "^1.1"
+pycodestyle_magic = "^0.5"
+dbx-deploy = "^1.0"
 
 [pyfony.bootstrap]
 root_module_name = "__myproject__"
