--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,15 +21,15 @@ packages = [
 ]
 
 [tool.poetry.dependencies]
-python = ">=3.7.1,<4.0.0"
-pandas = "1.1.3"
+python = "3.8.8"
+pandas = "1.2.4"
 numpy = "1.19.2"
 injecta = "0.10.*"
 databricks-bundle = "^1.0"
 datalake-bundle = "^1.0"
 
 [tool.poetry.dev-dependencies]
-databricks-connect = "^7.3"
+databricks-connect = "^9.1"
 black = "^20.8b1"
 poethepoet = ">=0.9.0,<1.0.0"
 flake8 = "3.7.*"
