--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -3,14 +3,14 @@ on:
   pull_request:
 
 jobs:
-  call-build:
+  build:
     uses: daipe-ai/skeleton-databricks/.github/workflows/build.yml@master
 
-  call-deploy:
-    needs: call-build
-    uses: daipe-ai/skeleton-databricks/.github/workflows/deploy.yml@master
+  deploy:
+    needs: build
+    uses: daipe-ai/skeleton-databricks/.github/workflows/run_command.yml@master
     with:
-      deploy_command: daipe dbx:repo:update --env=test --repo-url=https://github.com/daipe-ai/skeleton-databricks.git --branch=${{ github.head_ref }} --repo-name=${{ github.head_ref }}
+      command: daipe dbx:repo:update --env=test --repo-url=${{ github.server_url }}/${{ github.repository }}.git --branch=${{ github.head_ref }} --repo-name=${{ github.head_ref }}
       env: test
     secrets:
       DBX_URL: ${{ secrets.DBX_URL }}
