Fixed branch delete

--- a/.github/workflows/branch_delete.yml
+++ b/.github/workflows/branch_delete.yml
@@ -6,7 +6,7 @@ jobs:
   delete:
     uses: daipe-ai/daipe-project-ci-cd/.github/workflows/run_command.yml@v1
     with:
-      command: daipe dbx:repo:delete --env=test --repo-url=${{ github.server_url }}/${{ github.repository }}.git --repo-name=${GITHUB_REF#refs/heads/}
+      command: daipe dbx:repo:delete --env=test --repo-url=${{ github.server_url }}/${{ github.repository }}.git --repo-name=${{ github.event.ref }}
       env: test
     secrets:
       DBX_URL: ${{ secrets.DBX_URL }}
