--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -4,4 +4,4 @@ on:
 
 jobs:
   build:
-    uses: daipe-ai/skeleton-databricks/.github/workflows/build.yml@master
+    uses: daipe-ai/daipe-project-ci-cd/.github/workflows/build.yml@v1
