--- a/.github/workflows/prod.yml
+++ b/.github/workflows/prod.yml
@@ -5,11 +5,11 @@ on:
 
 jobs:
   build:
-    uses: daipe-ai/skeleton-databricks/.github/workflows/build.yml@master
+    uses: daipe-ai/daipe-project-ci-cd/.github/workflows/build.yml@v1
 
   deploy:
     needs: build
-    uses: daipe-ai/skeleton-databricks/.github/workflows/run_command.yml@master
+    uses: daipe-ai/daipe-project-ci-cd/.github/workflows/run_command.yml@v1
     with:
       command: daipe dbx:repo:update --env=test --repo-url=${{ github.server_url }}/${{ github.repository }}.git --tag=${{ github.ref }} --repo-name=master
       env: prod
