--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -4,11 +4,11 @@ on:
 
 jobs:
   build:
-    uses: daipe-ai/skeleton-databricks/.github/workflows/build.yml@master
+    uses: daipe-ai/daipe-project-ci-cd/.github/workflows/build.yml@v1
 
   deploy:
     needs: build
-    uses: daipe-ai/skeleton-databricks/.github/workflows/run_command.yml@master
+    uses: daipe-ai/daipe-project-ci-cd/.github/workflows/run_command.yml@v1
     with:
       command: daipe dbx:repo:update --env=test --repo-url=${{ github.server_url }}/${{ github.repository }}.git --branch=${{ github.head_ref }} --repo-name=${{ github.head_ref }}
       env: test
