--- a/pyproject.toml
+++ b/pyproject.toml
@@ -78,8 +78,9 @@ distro = "1.4.0"
 
 # Custom dependencies
 injecta = "0.10.*"
-databricks-bundle = "^1.2"
-datalake-bundle = "^1.2"
+databricks-bundle = "^1.3.1"
+datalake-bundle = "^1.2.2"
+daipe-core = "^1.3"
 
 [tool.poetry.dev-dependencies]
 databricks-connect = { url = "https://daipe-packages.s3.eu-central-1.amazonaws.com/databricks-connect-9.1.2.tar.gz" }
