--- a/src/__myproject__/_config/config_prod.yaml
+++ b/src/__myproject__/_config/config_prod.yaml
@@ -4,6 +4,10 @@ imports:
 parameters:
   databricks:
     address: 'https://adb-8328309645514519.19.azuredatabricks.net/'
+    repo:
+      base_dir: "/Repos/{repo_name}/latest_tag"
+    job:
+      suffix: "{repo_name}"
 
   datalakebundle:
     notebook:
