--- a/src/__myproject__/_config/config_test.yaml
+++ b/src/__myproject__/_config/config_test.yaml
@@ -4,3 +4,7 @@ imports:
 parameters:
   databricks:
     address: 'https://adb-8328309645514519.19.azuredatabricks.net/'
+    repo:
+      base_dir: "/Repos/{repo_name}/{branch_name}"
+    job:
+      suffix: "{repo_name} ({branch_name})"
