--- a/.github/workflows/create-or-update-jobs-prod.yml
+++ b/.github/workflows/create-or-update-jobs-prod.yml
@@ -11,6 +11,6 @@ jobs:
     needs: build
     uses: daipe-ai/daipe-project-ci-cd/.github/workflows/run_command.yml@v1
     with:
-      command: bash ./tools/_jobs/prod ${{ github.event.repository.name }}
+      command: daipe dbx:job:create-all --env=prod --repo_name=${{ github.event.repository.name }}
     secrets:
       DBX_TOKEN: ${{ secrets.DBX_TOKEN }}
