--- a/.github/workflows/create-or-update-jobs-test.yml
+++ b/.github/workflows/create-or-update-jobs-test.yml
@@ -10,6 +10,6 @@ jobs:
     needs: build
     uses: daipe-ai/daipe-project-ci-cd/.github/workflows/run_command.yml@v1
     with:
-      command: bash ./tools/_jobs/test ${{ github.head_ref }}
+      command: daipe dbx:job:create-all --env=test --repo_name=${{ github.event.repository.name }} --branch_name=${{ github.head_ref }}
     secrets:
       DBX_TOKEN: ${{ secrets.DBX_TOKEN }}
