--- a/.github/workflows/prod.yml
+++ b/.github/workflows/prod.yml
@@ -11,6 +11,6 @@ jobs:
     needs: build
     uses: daipe-ai/daipe-project-ci-cd/.github/workflows/run_command.yml@v1
     with:
-      command: daipe dbx:repo:update --env=test --repo-url=${{ github.server_url }}/${{ github.repository }}.git --tag=${{ github.ref }} --repo-name=master
+      command: daipe dbx:repo:update --env=prod --repo-url=${{ github.server_url }}/${{ github.repository }}.git --repo-url=${{ github.server_url }}/${{ github.repository }}.git --repo-name=${{ github.event.repository.name }} --force
     secrets:
       DBX_TOKEN: ${{ secrets.DBX_TOKEN }}
