Dbx url moved to configs, tidied up ci/cd

--- a/src/__myproject__/_config/config_dev.yaml
+++ b/src/__myproject__/_config/config_dev.yaml
@@ -3,4 +3,4 @@ imports:
 
 parameters:
   databricks:
-    address: '[Your workspace address]'
+    address: 'https://adb-8328309645514519.19.azuredatabricks.net/'
