--- a/src/__myproject__/_config/config_prod.yaml
+++ b/src/__myproject__/_config/config_prod.yaml
@@ -3,7 +3,7 @@ imports:
 
 parameters:
   databricks:
-    address: '[Your workspace address]'
+    address: 'https://adb-8328309645514519.19.azuredatabricks.net/'
 
   datalakebundle:
     notebook:
