Removed: flake8 | Added: pylint, shortcut creator | Updated: dbx-poetry

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -5,6 +5,8 @@ on:
 jobs:
   build:
     uses: daipe-ai/daipe-project-ci-cd/.github/workflows/build.yml@v1
+    with:
+      pylint_enabled: true
 
   deploy:
     needs: build
