--- a/pyproject.toml
+++ b/pyproject.toml
@@ -80,14 +80,12 @@ distro = "1.4.0"
 injecta = "0.10.*"
 databricks-bundle = "^1.3.1"
 datalake-bundle = "^1.2.2"
-daipe-core = "^1.3"
+daipe-core = "^1.4.1"
+pylint = "^2.12.2"
 
 [tool.poetry.dev-dependencies]
 databricks-connect = { url = "https://daipe-packages.s3.eu-central-1.amazonaws.com/databricks-connect-9.1.2.tar.gz" }
 poethepoet = ">=0.9.0,<1.0.0"
-flake8 = "3.7.*"
-pep8-naming = ">=0.11.1,<1.0.0"
-pycodestyle_magic = "^0.5"
 pyfony-core = "^0.8.2"
 dbx-deploy = "^1.3.1"
 lineage-bundle = "^1.0.2"
@@ -96,6 +94,25 @@ jobs-bundle = "^0.5.1"
 [pyfony.bootstrap]
 root_module_name_search_exclude=["daipe"]
 
+[tool.pylint.basic]
+module-rgx = "(([a-z_][a-z0-9_]*)|([A-Z][a-zA-Z0-9]+))$"
+
+[tool.pylint.messages_control]
+max-line-length = 140
+disable = [
+    "missing-docstring",
+    "wrong-import-order",
+    "duplicate-code",
+    "line-too-long",
+    "bad-continuation",
+    "too-many-arguments",
+    "too-few-public-methods",
+    "ungrouped-imports",
+    "no-self-use",
+]
+good-names = ["df", "sc", "i", "n"]
+
 [tool.poe.tasks]
-flake8 = "flake8 --ignore=E501,E305,E302,F403,F405,W503 src"
+pylint = "pylint src"
 container-check = { shell = "python src/$(ls -I daipe.py src)/ContainerTest.py" }
+unify-imports = { shell = "python $(python -c 'import sysconfig; print(sysconfig.get_paths()[\"purelib\"])')/daipecore/shortcut/ShortcutCreator.py" }
