--- a/src/__myproject__/_config/bundles/jobsbundle.yaml
+++ b/src/__myproject__/_config/bundles/jobsbundle.yaml
@@ -1,5 +1,5 @@
 parameters:
   jobsbundle:
     databricks:
-      host: '%databricks.address%'
+      host: '%daipeproject.databricks.address%'
       token: '%env(DBX_TOKEN)%'
