--- a/src/__myproject__/_config/config_dev.yaml
+++ b/src/__myproject__/_config/config_dev.yaml
@@ -2,9 +2,10 @@ imports:
   - config.yaml
 
 parameters:
-  databricks:
-    address: 'https://adb-8328309645514519.19.azuredatabricks.net/'
-    repo:
-      base_dir: "/Repos/{user_folder_name}/{dir_name}"
-    job:
-      suffix: "{user_folder_name} ({dir_name})"
+  daipeproject:
+    databricks:
+      address: 'https://adb-8328309645514519.19.azuredatabricks.net/'
+      repo:
+        base_dir: "/Repos/{user_folder_name}/{dir_name}"
+      job:
+        suffix: "{user_folder_name} ({dir_name})"
