--- a/.github/workflows/create_templates.yml
+++ b/.github/workflows/create_templates.yml
@@ -35,7 +35,7 @@ jobs:
           sed -i "s/address:.*azuredatabricks.net.*/address: \'[Your workspace address]\'/g" src/$(ls -I daipe.py src)/_config/config_*.yaml
           mv src/__myproject__ src/daipeproject
 
-      - name: Create Base Template
+      - name: Create Feature Store Template
         env:
           TEMPLATE_CREATOR_USERNAME: ${{ secrets.TEMPLATE_CREATOR_USERNAME }}
           TEMPLATE_CREATOR_TOKEN: ${{ secrets.TEMPLATE_CREATOR_TOKEN }}
@@ -44,16 +44,17 @@ jobs:
           git init
           git add -- . ':!.github/workflows/create_templates.yml' ':!.vscode/' ':!.idea/'
           git commit -m "Initial commit"
-          git remote add origin https://${TEMPLATE_CREATOR_USERNAME}:${TEMPLATE_CREATOR_TOKEN}@github.com/daipe-ai/daipe-template-base.git
+          git remote add origin https://${TEMPLATE_CREATOR_USERNAME}:${TEMPLATE_CREATOR_TOKEN}@github.com/daipe-ai/daipe-template-feature-store.git
           git push origin master --force
 
-      - name: Create Feature Store Template
+      - name: Create Base Template
         env:
           TEMPLATE_CREATOR_USERNAME: ${{ secrets.TEMPLATE_CREATOR_USERNAME }}
           TEMPLATE_CREATOR_TOKEN: ${{ secrets.TEMPLATE_CREATOR_TOKEN }}
         run: |
-          poetry add feature-store-bundle --lock
-          git add pyproject.toml poetry.lock
+          poetry remove feature-store-bundle --lock
+          poe unify-imports
+          git add pyproject.toml poetry.lock src/daipeproject/daipe.py ':!src/daipeproject/_orchestration' ':!src/daipeproject/_config/bundles/featurestorebundle.yaml'
           git commit --amend -m "Initial commit"
-          git remote set-url origin https://${TEMPLATE_CREATOR_USERNAME}:${TEMPLATE_CREATOR_TOKEN}@github.com/daipe-ai/daipe-template-feature-store.git
+          git remote set-url origin https://${TEMPLATE_CREATOR_USERNAME}:${TEMPLATE_CREATOR_TOKEN}@github.com/daipe-ai/daipe-template-base.git
           git push origin master --force
