--- a/pyproject.toml
+++ b/pyproject.toml
@@ -91,6 +91,8 @@ dbx-deploy = "^1.3.1"
 lineage-bundle = "^1.0.2"
 jobs-bundle = "^0.5.1"
 pylint = "^2.12.2"
+# for cached property
+pygit2 = "1.3.0"
 
 [pyfony.bootstrap]
 root_module_name_search_exclude=["daipe"]
