--- a/pyproject.toml
+++ b/pyproject.toml
@@ -81,6 +81,7 @@ injecta = "0.10.*"
 databricks-bundle = "^1.3.1"
 datalake-bundle = "^1.2.2"
 daipe-core = "^1.4.1"
+feature-store-bundle = "^2.0.0"
 
 [tool.poetry.dev-dependencies]
 databricks-connect = { url = "https://daipe-packages.s3.eu-central-1.amazonaws.com/databricks-connect-9.1.2.tar.gz" }
@@ -90,6 +91,7 @@ dbx-deploy = "^1.3.1"
 lineage-bundle = "^1.0.2"
 jobs-bundle = "^0.5.1"
 pylint = "^2.12.2"
+cached-property = "^1.5.2"
 
 [pyfony.bootstrap]
 root_module_name_search_exclude=["daipe"]
