--- a/.github/workflows/create_templates.yml
+++ b/.github/workflows/create_templates.yml
@@ -54,7 +54,7 @@ jobs:
         run: |
           sed -i '/feature-store-bundle/d' ./pyproject.toml
           poetry lock --no-update
-          poe unify-imports
+          sed -i '/featurestorebundle/d' ./src/daipe.py
           git add pyproject.toml poetry.lock src/daipeproject/daipe.py ':!src/daipeproject/_orchestration' ':!src/daipeproject/_config/bundles/featurestorebundle.yaml'
           git commit --amend -m "Initial commit"
           git remote set-url origin https://${TEMPLATE_CREATOR_USERNAME}:${TEMPLATE_CREATOR_TOKEN}@github.com/daipe-ai/daipe-template-base.git
