--- a/.github/workflows/create_templates.yml
+++ b/.github/workflows/create_templates.yml
@@ -55,7 +55,7 @@ jobs:
           sed -i '/feature-store-bundle/d' ./pyproject.toml
           poetry lock --no-update
           sed -i '/featurestorebundle/d' ./src/daipe.py
-          git add pyproject.toml poetry.lock src/daipeproject/daipe.py ':!src/daipeproject/_orchestration' ':!src/daipeproject/_config/bundles/featurestorebundle.yaml'
+          git add pyproject.toml poetry.lock src/daipe.py ':!src/daipeproject/_orchestration' ':!src/daipeproject/_config/bundles/featurestorebundle.yaml'
           git commit --amend -m "Initial commit"
           git remote set-url origin https://${TEMPLATE_CREATOR_USERNAME}:${TEMPLATE_CREATOR_TOKEN}@github.com/daipe-ai/daipe-template-base.git
           git push origin master --force
