--- a/src/__myproject__/_config/config.yaml
+++ b/src/__myproject__/_config/config.yaml
@@ -8,8 +8,8 @@ parameters:
       base_path: '/%kernel.environment%'
 
     clickhouse:
-      host: "20.56.36.125"
-      port: 8123
+      host:
+      port:
 
   # overrides default bundle settings defined in site-packages/databricksbundle/_config/config.yaml
   #databricksbundle:
