--- a/src/__myproject__/_config/config.yaml
+++ b/src/__myproject__/_config/config.yaml
@@ -10,6 +10,7 @@ parameters:
     clickhouse:
       host:
       port:
+      exclued_columns:
 
   # overrides default bundle settings defined in site-packages/databricksbundle/_config/config.yaml
   #databricksbundle:
