--- a/src/__myproject__/_config/config.yaml
+++ b/src/__myproject__/_config/config.yaml
@@ -10,7 +10,9 @@ parameters:
     clickhouse:
       host:
       port:
-      exclued_columns:
+
+    export:
+      excluded_columns:
 
   # overrides default bundle settings defined in site-packages/databricksbundle/_config/config.yaml
   #databricksbundle:
